[gd_scene load_steps=8 format=3 uid="uid://dlyuy8ass0ctn"]

[ext_resource type="Script" path="res://scripts/game/mapObjects/button/button.gd" id="1_63e22"]
[ext_resource type="Texture2D" uid="uid://dfvmmdn434uk3" path="res://assets/images/game/mapOjects/button/button_pressed1.png" id="2_5r16a"]
[ext_resource type="Script" path="res://scripts/game/entities/components/hitboxComponent.gd" id="3_hlmck"]
[ext_resource type="Texture2D" uid="uid://cfps5kgudupy6" path="res://assets/images/game/mapOjects/button/button_pressed2.png" id="3_nkrxu"]
[ext_resource type="Texture2D" uid="uid://bwy4l7tq2d4j0" path="res://assets/images/game/mapOjects/button/button_pressed3.png" id="4_6m1y7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rreld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5r16a")
}, {
"duration": 1.0,
"texture": ExtResource("3_nkrxu")
}, {
"duration": 1.0,
"texture": ExtResource("4_6m1y7")
}],
"loop": false,
"name": &"pressed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6m1y7")
}, {
"duration": 1.0,
"texture": ExtResource("3_nkrxu")
}, {
"duration": 1.0,
"texture": ExtResource("2_5r16a")
}],
"loop": false,
"name": &"unpressed",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0uvk"]
size = Vector2(26, 19)

[node name="button" type="StaticBody2D"]
texture_filter = 1
collision_mask = 6
script = ExtResource("1_63e22")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rreld")
animation = &"unpressed"

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource("3_hlmck")

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_o0uvk")

[node name="interactText" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = 10.0
scale = Vector2(0.5, 0.5)
text = "E"

[connection signal="animation_changed" from="sprite" to="." method="_on_sprite_animation_changed"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
